--- a/app/views/prescriptions/new.html.erb
+++ b/app/views/prescriptions/new.html.erb
@@ -3,7 +3,7 @@ provide(:title, 'New Prescription')
 provide(:button_text, 'Save Changes')
 %>
 
-<div class="col-sm-6 col-sm-offset-3">
+<div class="col-sm-10 col-md-6 col-md-offset-3 col-sm-offset-1">
    <h3 class='display-1'>Patient <%= @patient.full_name %> : New Prescription </h3>
    <%= render 'form' %>
 </div>
