--- a/app/views/diagnoses/index.html.erb
+++ b/app/views/diagnoses/index.html.erb
@@ -2,6 +2,7 @@
 <%= render "shared/modal", size: 'lg' %>
 
 <table class="tbl2 table-hover table-striped table-bordered" >
+  <caption>Full list of diagnoses</caption>
   <thead>
       <tr>
 	  <th><%= sortable 'code'  %></th>
