--- a/app/views/patients/_form.html.erb
+++ b/app/views/patients/_form.html.erb
@@ -138,7 +138,7 @@
 <!-- Row 7 -->
 <div class="row">
   <div class="col-sm-12">
-  <%= f.input :meds, as: :text, rows:2, placeholder: 'Medications', label: false %>
+  <%= f.input :meds, as: :text, rows:2, placeholder: 'Medications', label: false, disabled: true %>
   </div>
 </div>
 
