--- a/app/views/providers/index.html.erb
+++ b/app/views/providers/index.html.erb
@@ -3,6 +3,7 @@
 
 <table class="tbl2 table-hover table-striped table-bordered" >
   <thead>
+  <caption>Full list of insurance providers</caption>
       <tr>
           <th class="tbl_lg">Name</th>
           <th class="tbl_lg">Address</th>
