--- a/app/views/visits/_edit.html.erb
+++ b/app/views/visits/_edit.html.erb
@@ -1,8 +1,7 @@
-
 <%
    provide(:title, 'Edit Visit')
    provide(:button_text, 'Save changes')
-   @patient = Patient.find(@visit.patient_id)
+   @patient = @visit.pat 
 %>
  
 <div class="modal-header">
