--- a/app/views/visits/receipt.js.erb
+++ b/app/views/visits/receipt.js.erb
@@ -1,2 +1,2 @@
-$("#modal-window").find(".modal-content").html("<%= j (render 'receipt') %>");
-$("#modal-window").modal();
+$("#modal-window-lg").find(".modal-content").html("<%= j (render 'receipt') %>");
+$("#modal-window-lg").modal();
