--- a/app/views/doctors/index.html.erb
+++ b/app/views/doctors/index.html.erb
@@ -2,6 +2,7 @@
 <%= render "shared/modal", size: 'lg' %>
 
 <table class="tbl2 table-hover table-striped table-bordered" >
+  <caption>Full list of doctors</caption>
   <thead>
       <tr>
           <th class='tbl_lmd'>Name</th>
