--- a/app/views/vaccines/index.html.erb
+++ b/app/views/vaccines/index.html.erb
@@ -2,6 +2,7 @@
 <%= render "shared/modal", size: 'lg' %>
 
 <table class="tbl2 table-hover table-striped table-bordered" >
+  <caption>Full list of vaccines</caption>
   <thead>
       <tr>
           <th class="tbl_md">Name</th>
