--- a/app/views/visits/edit.js.erb
+++ b/app/views/visits/edit.js.erb
@@ -1,2 +1,2 @@
-$("#modal-window").find(".modal-content").html("<%= j (render 'edit') %>");
-$("#modal-window").modal();
+$("#modal-window-lg").find(".modal-content").html("<%= j (render 'edit') %>");
+$("#modal-window-lg").modal();
