modal bugs fixed

--- a/app/views/medications/index.html.erb
+++ b/app/views/medications/index.html.erb
@@ -1,5 +1,5 @@
 <% provide(:title, 'Patient List Of medications') %>
-<%= render 'shared/modal', size: 'lg' %>
+<%= render 'shared/modal' %>
 <% active_med_count = @patient.med_count  %>
 
 <div class='spacer-20'></div>
