--- a/app/views/medications/new.html.erb
+++ b/app/views/medications/new.html.erb
@@ -1,6 +1,6 @@
 <% provide(:title, 'Add Medication') %>
 <% provide(:button_text, 'Add') %>
-<%= render 'shared/modal', size: 'lg' %>
+<%# render 'shared/modal' %>
 
 <div class="spacer-20"></div>
 <div class="col-md-6 col-sm-8 col-md-offset-3 col-sm-offset-2">
