--- a/app/views/medications/show.html.erb
+++ b/app/views/medications/show.html.erb
@@ -1,5 +1,5 @@
 <% provide(:title, @medication) %>
-<%= render "shared/modal", size: 'lg' %>
+<%= render "shared/modal" %>
 
 <div class="col-sm-6 col-sm-offset-3">
 <h3 class='display-1'>Medication <%= @medication.name %> - details  </h3>
