--- a/app/views/medications/edit.html.erb
+++ b/app/views/medications/edit.html.erb
@@ -1,6 +1,6 @@
 <% provide(:title, 'Edit Medication') %>
 <% provide(:button_text, 'Save Changes') %>
-<%= render "shared/modal", size: 'lg' %>
+<%= render "shared/modal" %>
 
 <div class="col-sm-8 col-sm-offset-2">
     <h3 class='display-1'>Patient <%= link_to @medication.patient.full_name, @patient %> - Edit Medication</h3>
