--- a/app/views/patients/edit.js.erb
+++ b/app/views/patients/edit.js.erb
@@ -1,3 +1,3 @@
-$("#modal-window-lg").find(".modal-content").html("<%= j (render 'edit') %>");
-$("#modal-window-lg").modal();
+$("#modal-window").find(".modal-content").html("<%= j (render 'edit') %>");
+$("#modal-window").modal();
 
