--- a/app/views/visits/show.html.erb
+++ b/app/views/visits/show.html.erb
@@ -79,17 +79,17 @@
 <div class="row">
  <% if [ARRIVED,READY,ERROR].include?(@visit.status) || current_user.admin? %>
  <div class="col-sm-3 col-md-2">
-  <%= button_to "Edit Visit", edit_patient_visit_path(@patient,@visit), remote: remote, 'data-toggle':  "modal", 'data-target': '#modal-window-lg', class: "btn btn-primary btn-lg", method: "get" %>
+  <%= button_to "Edit Visit", edit_patient_visit_path(@patient,@visit), remote: remote, 'data-toggle':  "modal", 'data-target': '#modal-window', class: "btn btn-primary btn-lg", method: "get" %>
  </div>
  <% end %>
 
 <div class="col-sm-3 col-md-2">
-<%= button_to "Visit Form", visitform_patient_visit_path(@patient,@visit), remote: remote, 'data-toggle':  "modal", 'data-target': '#modal-window-lg',  class:"btn btn-info btn-lg", method: 'get'  %>
+<%= button_to "Visit Form", visitform_patient_visit_path(@patient,@visit), remote: remote, 'data-toggle':  "modal", 'data-target': '#modal-window',  class:"btn btn-info btn-lg", method: 'get'  %>
 </div>
 
  <% if @visit.cash? %> 
  <div class="col-sm-3 col-md-2">
- <%= button_to "Receipt", receipt_patient_visit_path(@patient,@visit), remote: remote, 'data-toggle':  "modal", 'data-target': '#modal-window-lg', class: "btn btn-warning btn-lg", method: 'get' %>
+ <%= button_to "Receipt", receipt_patient_visit_path(@patient,@visit), remote: remote, 'data-toggle':  "modal", 'data-target': '#modal-window', class: "btn btn-warning btn-lg", method: 'get' %>
  </div>
  <% end %>
  
