--- a/app/views/shared/_modal.html.erb
+++ b/app/views/shared/_modal.html.erb
@@ -2,16 +2,17 @@
 
 <% modifier = (defined?(size)).nil? ? 'modal-lg': 'modal-'+size %>
 
-<div id="modal-window" class="modal fade printable autoprint" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true" tabindex="-1">
+<div id="modal-window" class="modal fade printable autoprint" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
   <div class="modal-dialog <%= modifier %>" role="document">
     <div class="modal-content"></div>
   </div>
 </div>
 
+<!--
 <div id="modal-window-sm" class="modal fade printable autoprint" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true" tabindex="-1">
   <div class="modal-dialog">
     <div class="modal-content"></div>
   </div>
 </div>
-
+-->
 
