--- a/app/views/visits/_form.html.erb
+++ b/app/views/visits/_form.html.erb
@@ -168,6 +168,8 @@
 <script>
 $(document).ready(function() {
 
+//    $.fn.select2.defaults.set( "theme", "classic" );
+
     $("#visit_diag_code").select2();
     $('#visit_proc_code').select2();
     $('#visit_proc_code2').select2();
