Modal size body for mobile - fixed; drug modal bug - fixed
Bug fixes and format changes; edit enabled for staff in medications;
Modal viewing on mobile issue -  fixed

--- a/app/views/invoices/_show.html.erb
+++ b/app/views/invoices/_show.html.erb
@@ -7,7 +7,7 @@
 	<b class="modal-title" id="myModalLabel">Patient <%= @invoice.patient.lname %>,  Invoice To:  <%= @invoice.provider.name %></b>
 </div>
 <div class="modal-body">
-	<iframe id="myModal" src="/invoices/<%= @invoice.id %>" frameborder="0" width="100%" height="700px"></iframe>
+	<object type="application/pdf" data="/invoices/<%= @invoice.id %>" width="100%" height="700">No Support</object>
 </div>
 <div class="modal-footer">
   <button class="btn btn-primary" class="close" data-dismiss="modal">Dismiss</button>
