--- a/app/views/medications/show.js.erb
+++ b/app/views/medications/show.js.erb
@@ -1,2 +1,3 @@
 $("#modal-window").find(".modal-content").html("<%= j (render 'show') %>");
 $("#modal-window").modal();
+<%= render "shared/modal" %>
