--- a/app/views/patients/show.html.erb
+++ b/app/views/patients/show.html.erb
@@ -2,7 +2,7 @@
 <%= render "shared/modal" %>
 <% remote = device_is_desktop? %>
 
-<h1><%= @patient.full_name %> :  Patient Profile &nbsp; <%= link_to '<i class="glyphicon glyphicon-edit"></i>'.html_safe, edit_patient_path(@patient), remote: remote, 'data-toggle': "modal", 'data-target': '#modal-window' %></h1>
+<h1><%= @patient.full_name %> :  Patient Profile &nbsp; <%= link_to '<i class="glyphicon glyphicon-edit"></i>'.html_safe, edit_patient_path(@patient), remote: true, 'data-toggle': "modal", 'data-target': '#modal-window' %></h1>
 
 <div class="row">
   <aside class="col-md-6">
