--- a/app/views/letters/_show.html.erb
+++ b/app/views/letters/_show.html.erb
@@ -7,7 +7,7 @@
 	<b class="modal-title" id="myModalLabel">Letter Re: patient <%= @letter.patient.lname %>  To:  <%= @letter.to %></b>
 </div>
 <div class="modal-body">
-	<iframe id="myModal" src="/letters/<%= @letter.id %>" frameborder="0" width="100%" height="700px"></iframe>
+	<object type="application/pdf" data="/letters/<%= @letter.id %>" width="100%" height="700">No Support</object>
 </div>
 <div class="modal-footer">
   <button class="btn btn-primary" class="close" data-dismiss="modal">Dismiss</button>
