--- a/app/views/medications/new.html.erb
+++ b/app/views/medications/new.html.erb
@@ -2,8 +2,10 @@
 <% provide(:button_text, 'Add') %>
 <%# render 'shared/modal' %>
 
-<div class="spacer-20"></div>
-<div class="col-md-6 col-sm-8 col-md-offset-3 col-sm-offset-2">
+<div class="spacer-20">&nbsp;</div>
+<div class="row">
+<div class="col-md-6 col-sm-10 col-md-offset-3 col-sm-offset-1">
     <h3 class='display-1'>Patient <%= link_to @medication.patient.full_name, @patient %> - Add Medication</h3>
     <%= render 'form' %>
+</div>
 </div>
