Switched devel/test to postgres; Bug fixes
Postgres is now used in development/test environment;
Updated encryptrd DB credentials, Gemfile, database.yml
edit/delete disabled in _medication_list modal
pgrestore.pl script excluded from repository
sqlite arrays workaround removed as sqlite is not used anymore
prescription date bug fixed. Defaults to creation date || today

--- a/app/views/medications/_form.html.erb
+++ b/app/views/medications/_form.html.erb
@@ -91,7 +91,7 @@ $(document).ready(function() {
    });
 
    function get_drug ( id ) {
-        var request = "/drugs/get/" + id;
+        var request = "/drugs/get?id=" + id;
         var aj = $.ajax({
         url: request,
         type: 'get',
