--- a/app/views/prescriptions/_form.html.erb
+++ b/app/views/prescriptions/_form.html.erb
@@ -17,18 +17,14 @@
   </div>
 
 <% (@patient.med_hash).each_with_index do |(key,val),i| %>
-  <!-- POSTGES arrays are read as arrays while SQLITE array are json/yaml strings. So, we need to deferrentiate -->
-  <% qty = (@prescription.qty.class == Array) ? @prescription.qty[i] : YAML.load(@prescription.qty)[i] %>
-  <% rep = (@prescription.repeats.class == Array) ? @prescription.repeats[i] : YAML.load(@prescription.repeats)[i] %>
-  <% dur = (@prescription.duration.class == Array) ? @prescription.duration[i] : YAML.load(@prescription.duration)[i] %>
   <div class="col-sm-1">
-     <%= f.input_field :qty, label: false, multiple: true, value: qty %> 
+     <%= f.input_field :qty, label: false, multiple: true, value: @prescription.qty[i] %> 
   </div>
   <div class="col-sm-1">
-     <%= f.input_field :repeats, label: false, multiple: true, value: rep %> 
+     <%= f.input_field :repeats, label: false, multiple: true, value: @prescription.repeats[i] %> 
   </div>
   <div class="col-sm-2" style="padding-top: 1px">
-     <%= f.input_field :duration, label: false, multiple: true, value: dur %> 
+     <%= f.input_field :duration, label: false, multiple: true, value: @prescription.duration[i]%> 
   </div>
 <% end %>
 </div>
