--- a/app/views/daysheet/index.html.erb
+++ b/app/views/daysheet/index.html.erb
@@ -37,6 +37,9 @@
 	  <th class="tbl_sm"></th> 
           <th class="tbl_sm"></th>
           <th class="tbl_sm"></th>
+	  <% if !device_is_desktop? %>
+            <th class="tbl_sm"></th>
+  	  <% end %>
 	  <% if current_user.admin? %>
 	    <th class="tbl_sm"></th>  <!-- Delete -->
   	  <% end %>
