--- a/app/views/medications/_form.html.erb
+++ b/app/views/medications/_form.html.erb
@@ -1,4 +1,3 @@
-<% doc_id = current_doctor.id rescue nil %>
 <% readonly = (action_name == 'show') ? true:false %>
 
 <%= simple_form_for [@patient,@medication] do |f| %>
@@ -22,7 +21,7 @@
   </div>
 <% end %>
   <div class="col-sm-3">
-    <%= f.input :doctor_id, collection: get_active_doctors, label_method: :lname, value_method: :id, prompt: 'Select', selected: doc_id, label:'Doctor', include_blank: 'Unknown', readonly: readonly %>
+    <%= f.input :doctor_id, collection: get_active_doctors, label_method: :lname, value_method: :id, prompt: 'Select', label:'Doctor', include_blank: 'Unknown', readonly: readonly %>
   </div>
 </div>
 
@@ -55,7 +54,7 @@
 <h3>Current medications: <%= active_med_count>0 ? active_med_count : 'None' %></h3>
 
 <!-- Show list of medications only for new medication -->
-<% if (action_name == 'new' ||  action_name == 'create') && active_med_count >0 %>
+<% if (action_name == 'new' ||  action_name == 'create' || action_name == 'edit') && active_med_count >0 %>
 	<%= render 'medication_list' %>
 <% end %>
 
