--- a/app/views/claims/index.html.erb
+++ b/app/views/claims/index.html.erb
@@ -1,4 +1,5 @@
 <% provide(:title, 'All claims') %>
+<%= render "shared/modal", size: 'lg' %>
 
 <div class='col-sm-12'>
 <%= form_with url: claims_index_path do |f| %>
@@ -44,7 +45,7 @@
   </thead>
   <tbody>
 
-  <%= render @claims %>
+  <%= render @claims, remote: device_is_desktop? %>
 
   </tbody>
 </table>
