--- a/app/views/letters/_letter.html.erb
+++ b/app/views/letters/_letter.html.erb
@@ -1,14 +1,25 @@
-<% patient = Patient.find(letter.patient_id) %>
+<% patient = letter.patient %>
 
     <tr>
-	<td><%= link_to "#{letter.id}", letter, remote: remote, 'data-toggle':  "modal", 'data-target': '#modal-window' %> </td>
+	<% if letter.exists? && device_is_desktop? %>
+	  <td><%= link_to letter.id, letter, remote: true, 'data-toggle':  "modal", 'data-target': '#modal-window' %></td>
+	<% else %>
+	  <td><%= letter.id %></td>
+	<% end %>  
+
 	<td><%= link_to patient.lname, patient %></td>
 	<td><%= letter.from %></td> 
 	<td><%= letter.to %></td> 
 	<td><%= letter.address_to %></td> 
 	<td><%= letter.title  %> </td> 
 	<td><%= letter.date %></td> 
-	<td><%=  link_to '<i class="glyphicon glyphicon-download"></i>'.html_safe, download_letter_path(letter)  %></td>
+
+	<% if letter.exists? %>
+	  <td><%= link_to '<i class="glyphicon glyphicon-download"></i>'.html_safe, download_letter_path(letter)  %></td>
+        <% else %> <!-- regenerate pdf -->
+	  <td><%= link_to '<i class="glyphicon glyphicon-question-sign"></i>'.html_safe, download_letter_path(letter)  %></td>
+  	<% end %>
+
 	<td><%=  link_to '<i class="glyphicon glyphicon-edit"></i>'.html_safe, edit_letter_path(letter), remote: remote, 'data-toggle':  "modal", 'data-target': '#modal-window' %></td>
 	<td> <%= link_to '<i class="glyphicon glyphicon-remove-sign"></i>'.html_safe, letter, method: :delete, data: { confirm: "Are you sure you want to delete letter # #{letter.id} ?" } %> </td>
      </tr>
