--- a/app/views/paystubs/_paystub.html.erb
+++ b/app/views/paystubs/_paystub.html.erb
@@ -1,5 +1,5 @@
 <tr>
-<% if paystub.filespec.present? && File.exists?(paystub.filespec) && device_is_desktop? %>
+<% if paystub.exists? && device_is_desktop? %>
   <td><%= link_to paystub.id, paystub_path(paystub),  remote: true, 'data-toggle':  "modal", 'data-target': '#modal-window' %></td>
 <% else %>
   <td><%= paystub.id %></td>
@@ -12,11 +12,13 @@
 <td><%= sprintf("$%.2f",paystub.gross_amt) %></td>
 <td><%= sprintf("$%.2f",paystub.net_amt) %></td>
 <td><%= paystub.ra_file %></td>
-<% if paystub.filespec.present? && File.exists?(paystub.filespec) %>
-  <td>&nbsp;&nbsp;<%= link_to '<i class="glyphicon glyphicon-download"></i>'.html_safe, download_paystub_path(paystub)  %></td>
+<td class='center'>
+<% if paystub.exists? %>
+  <%= link_to '<i class="glyphicon glyphicon-download"></i>'.html_safe, download_paystub_path(paystub)  %>
 <% else %> <!-- regenerate paystub -->
-  <td><%= link_to '<i class="glyphicon glyphicon-question-sign"></i>'.html_safe, download_paystub_path(paystub)  %></td>
+  <%= link_to '<i class="glyphicon glyphicon-question-sign"></i>'.html_safe, download_paystub_path(paystub)  %>
 <% end %>
+</td>
 
 <% if current_user.admin?  %>
 	<td><%= link_to '<i class="glyphicon glyphicon-remove-sign"></i>'.html_safe, paystub_path(paystub), method: :delete, data: { confirm: "Are you sure you want to delete paystub #{paystub.id} for doctor #{paystub.doctor.lname}" } %></td>
