--- a/app/views/referrals/_referral.html.erb
+++ b/app/views/referrals/_referral.html.erb
@@ -1,17 +1,27 @@
 <% 
-   patient = Patient.find(referral.patient_id) 
-   to_doctor = Doctor.find(referral.to_doctor_id)
+   patient = referral.patient 
 %>
 
     <tr>
-	<td><%= link_to "#{referral.id}", referral, remote: remote, 'data-toggle':  "modal", 'data-target': '#modal-window' %> </td>
+	<% if referral.exists? && device_is_desktop? %>
+	  <td><%= link_to referral.id, referral, remote: true, 'data-toggle':  "modal", 'data-target': '#modal-window' %></td>
+	<% else %>
+	  <td><%= referral.id %></td>
+	<% end %>  
+
 	<td><%= link_to patient.lname, patient %></td>
 	<td><%= referral.date %></td> 
 	<td><%= referral.doctor.lname %></td> 
-	<td><%= to_doctor.lname %></td> 
+	<td><%= referral.to_doctor.lname %></td> 
 	<td><%= referral.address_to %></td> 
 	<td><%= referral.to_phone %></td> 
-	<td><%= link_to '<i class="glyphicon glyphicon-download"></i>'.html_safe, download_referral_path(referral)  %></td>
+
+	<% if referral.exists? %>
+	  <td><%= link_to '<i class="glyphicon glyphicon-download"></i>'.html_safe, download_referral_path(referral)  %></td>
+        <% else %> <!-- regenerate pdf -->
+	  <td><%= link_to '<i class="glyphicon glyphicon-question-sign"></i>'.html_safe, download_referral_path(referral)  %></td>
+  	<% end %>
+
 	<td><%= link_to '<i class="glyphicon glyphicon-edit"></i>'.html_safe, edit_referral_path(referral), remote: remote, 'data-toggle':  "modal", 'data-target': '#modal-window' %></td>
 	<td><%= link_to '<i class="glyphicon glyphicon-remove-sign"></i>'.html_safe, referral, method: :delete, data: { confirm: "Are you sure you want to delete referral # #{referral.id} ?" } %> </td>
      </tr>
