Paystub form revised; column added to model
- chk_amt column added to model
- Corresponding column added in the paystubs form
- editable method excudes cancelled visits

--- a/app/views/paystubs/_paystub.html.erb
+++ b/app/views/paystubs/_paystub.html.erb
@@ -11,6 +11,7 @@
 <td><%= paystub.services %></td>
 <td><%= sprintf("$%.2f",paystub.gross_amt) %></td>
 <td><%= sprintf("$%.2f",paystub.net_amt) %></td>
+<td><%= sprintf("$%.2f",paystub.chk_amt) %></td>
 <td><%= paystub.ra_file %></td>
 <td class='center'>
 <% if paystub.exists? %>
