--- a/app/views/paystubs/index.html.erb
+++ b/app/views/paystubs/index.html.erb
@@ -11,6 +11,7 @@
 	  <th class="tbl_lsm">#Services</th>
           <th>Gross</th>
           <th>Net</th>
+          <th>CHK</th>
           <th>RA File</th>
 	  <th>Download</th>
 	   <% if current_user.admin?  %>
