boostrap-sass security update; minor tweaks

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -70,7 +70,7 @@ table {
    padding:1px;
    min-height: 94%; //92%;
    padding-bottom:1px;  
-//   height: 100%;
+   height: 100%;
 //  margin: 0 auto -30px;  /* footer height */
 //   height: auto !important; /* Stick footer to bottom in IE6 */
 }
