unpaid visits are now shown in billing drop-down

--- a/app/views/layouts/_billing.html.erb
+++ b/app/views/layouts/_billing.html.erb
@@ -4,6 +4,7 @@
 <ul class="dropdown-menu">
 <li><%= link_to "Daily Billing", billings_path %></li>
 <li><%= link_to "Paid Claims", claims_path  %> </li>
+<li><%= link_to "Unpaid Claims", unpaid_visits_path  %> </li>
 <li> <%= link_to "Pay Stubs", paystubs_path, method: :get %> </li>
 <li> <%= link_to "MHO RA Messages", ra_messages_path, method: :get %> </li>
 </ul>
